# mmck-fectors

./: .gitignore  .travis.yml  ANNOUNCE  COPYING  Makefile.am  NEWS  README  README.md  README.vicare-scheme  acinclude.m4  autogen.sh  configure.ac  configure.sh
doc/: Makefile.am  fectors.texi  macros.texi  mmck-fectors.texi
lib/: Makefile.am  compile-all.sps  config.scm.in  dependencies.make  libraries.scm  mmck.fectors.core.scm  mmck.fectors.scm  mmck.fectors.version.scm
meta/autoconf/: mmux-chicken-check-library.m4  mmux-chicken-scheme.m4  mmux-split-version.m4
meta/automake/: mmck-rules.make
meta/makefiles/: libs.am  tests.am
meta/scripts/: mmck-template.pc.in
meta/slackware/: slack-desc.in
meta/travis-ci/: install-chicken-egg-coops.sh  install-chicken.sh  install-mmck-checks.sh
tests/: Makefile.am  test-fectors.scm  test-version.scm
