## Process this file with automake to produce Makefile.in

libvicaredir	= $(libdir)/vicare-scheme
libvicare2dir	= $(libdir)/vicare-scheme

dist_pkglibexec_SCRIPTS		= compile-all.sps

# These files are hand-written.
nobase_dist_libvicare_DATA	= fectors.sls

include $(top_srcdir)/meta/makefiles/libs.am

### end of file
